<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Nasa Daily Image</string>
    <string name="action_settings">Settings</string>
    
    <string name="test_image_title">
        Decorating the Sky
    </string>
    <string name="test_image_date">
        Mon, 27 Dec 2010 00:00:00 EST
    </string>
    <string name="test_image_description">
        This mosaic image taken by NASA\'s Wide-field
        Infrared Survey Explorer, of WISE, features
        three nebulae that are part of the giant Orion
        Molecular Cloud--the Flame nebula, the Horsehead
        nebula and NGC 2023. Despite its name, there is
    </string>
    
    <string name="refresh">Refresh</string>
    <string name="setwallpaper">Set Wallpaper</string>

</resources>
