<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:orientation="vertical">
    
	<ScrollView 
	    android:layout_width="fill_parent"
	    android:layout_height="wrap_content"
	    android:layout_weight="1">
	
		<LinearLayout
		    android:orientation="vertical"
		    android:layout_width="fill_parent"
		    android:layout_height="wrap_content">
		
			<TextView
		        android:id="@+id/imageTitle"
		        android:layout_width="wrap_content"
		        android:layout_height="wrap_content"
		        android:text="@string/test_image_title" />
		
			<TextView
		        android:id="@+id/imageDate"
		        android:layout_width="wrap_content"
		        android:layout_height="wrap_content"
		        android:text="@string/test_image_date" />
			    
		    <ImageView
		        android:id="@+id/imageDisplay"
		        android:layout_width="wrap_content"
		        android:layout_height="wrap_content"
		        android:src="@drawable/test_image" />
		    
		   
		   <TextView 
		        android:id="@+id/imageDescription"
		        android:layout_width="wrap_content"
		        android:layout_height="wrap_content"
		        android:text="@string/test_image_description" />
     
		</LinearLayout>
		
	</ScrollView>
	
	<LinearLayout 
	    android:orientation="horizontal"
	    android:layout_width="fill_parent"
	    android:layout_height="wrap_content"
	    android:background="#ff8D8D8D"
	    android:layout_marginTop="5dp"
	    android:padding="5dp"
	    android:gravity="center"
	    android:layout_weight="0">
	    
	    <Button android:text="@string/refresh"
	        android:onClick="onRefresh"
		    android:layout_width="wrap_content"
		    android:layout_height="wrap_content" />
	    
	    <Button android:text="@string/setwallpaper"
	        android:onClick="onSetWallpaper"
		    android:layout_width="wrap_content"
		    android:layout_height="wrap_content" />
	    
	</LinearLayout>

</LinearLayout>